Details
-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.4.0
-
-
45be9f75b (dev), c7944d650 (6.5), 44893dda4 (6.6)
Description
It seems that Qt Multimedia is not able to use hardware acceleration with AV1 or HEVC video. With following extension, Windows Media Player can do it, but Qt Multimedia seems to use CPU only on the same system.
https://apps.microsoft.com/store/detail/av1-video-extension/9MVZQVXJBQ9V?hl=en-us&gl=us
Can be reproduced with media player example playing some AV1 file and looking at CPU/GPU usages.
Attachments
Issue Links
- relates to
-
QTBUG-113559 QML media player example crashes because of the combination FFMPEG + D3D11 (AMD)
- Closed