Disable decoder setup if HW textures not shared

Currently, if hardware texture sharing is disabled decoder is still
being set up for it, which results in an erroneous behavior. This patch
disables decoder setup in this case which leads to default FFmpeg
initialization for frames context.

Task-number: QTBUG-108427
Change-Id: Ibef4af04bce655088ad40bc0e7131d04bc76abb9
Reviewed-by: Artem Dyomin <artem.dyomin@qt.io>
(cherry picked from commit 45be9f75b7002363b673ebb8e2ce11086145258f)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>